tests/auto/linguist/lupdate/testdata/good/parsecpp_clang_only/project.pro
@@ -1,9 +1,0 @@
-SOURCES += test_QT_TR_NOOP_context.cpp
-SOURCES += test_QT_TR_NOOP_context_bis.cpp
-SOURCES += test_isolatedComments.cpp
-SOURCES += test_sameLineComments.cpp
-SOURCES += test_contain_only_alias.cpp
-SOURCES += test_line_directive.cpp
-SOURCES += test_header_only.cpp
-
-TRANSLATIONS = project.ts
