tests/auto/linguist/lupdate/testdata/good/parsecpp_clang_only/test_line_directive.cpp
@@ -1,7 +1,0 @@
-#include <QtCore>
-
-QString t1 = QObject::tr("blabla 1");
-
-#line 1 "toto.cpp"
-
-QString t2 = QObject::tr("blabla 2");
