tests/auto/linguist/lupdate/testdata/good/parsecpp_clang_parser/my_include.h
@@ -1,6 +1,0 @@
-#include <QtCore>
-
-class Foo
-{
-  Q_OBJECT
-};
